[tool.poetry]
name = "ec2-slackbot"
version = "0.1.0"
description = ""
authors = ["Robert Dargavel Smith <teticio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
slack-sdk = "^3.29.0"
boto3 = "^1.34.131"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
ec2-slackbot = "app:main"

[tool.poetry.group.dev.dependencies]
localstack = "^3.5.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
